<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.Profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:id="@+id/userDetailsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- User DP, name, and username -->
                    <ImageView
                        android:id="@+id/imageViewProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dp_placeholder" />

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="John Doe"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="4dp"
                        android:text="@string/username"
                        android:textSize="14sp" />

                    <!-- Edit profile button -->
                    <LinearLayout
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/btnFollowProfile"
                            android:layout_marginBottom="@dimen/activity_horizontal_margin"
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:background="@drawable/circular_bg"
                            android:orientation="horizontal"
                            android:paddingEnd="@dimen/activity_horizontal_margin"
                            android:paddingStart="@dimen/activity_horizontal_margin">

                            <TextView
                                android:id="@+id/button_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follow_profile"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />
                            <View
                                android:layout_margin="8dp"
                                android:background="@color/white"
                                android:layout_width="1dp"
                                android:layout_height="match_parent"/>

                            <ImageView

                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:src="@drawable/ic_add_white"
                                android:contentDescription="@string/edit_profile" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/btnSubscribeProfile"
                            android:layout_marginBottom="@dimen/activity_horizontal_margin"
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="36dp"
                            android:background="@drawable/circular_bg"
                            android:orientation="horizontal"
                            android:paddingEnd="@dimen/activity_horizontal_margin"
                            android:paddingStart="@dimen/activity_horizontal_margin">

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/subscribe_profile"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />
                            <View
                                android:layout_margin="8dp"
                                android:background="@color/white"
                                android:layout_width="1dp"
                                android:layout_height="match_parent"/>

                            <ImageView
                                android:id="@+id/button_image"
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:src="@drawable/ic_notification_add_white"
                                android:contentDescription="@string/edit_profile" />

                        </LinearLayout>

                    </LinearLayout>

                    <include layout="@layout/profile_card" />
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- User's feed list -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUserFeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
